fixed navigation padding and margins on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,7 +261,8 @@ footer p{
     .navbar-white a {
       float: none;
       display: inline-block;
-      margin: 0 3px;
+      margin: 0 0 0 20px;
+      padding: 0 20px 0 0;
     }
 }
 @media screen and (max-width: 768px){
